--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,4 +13,5 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Depends: MASS, tidyverse, broom, readxl, devtools, smmr, PMCMRplus, leaps, lubridate, ggrepel, rstan, loo, bootstrap, conflicted
+Depends: MASS, tidyverse, broom, readxl, devtools, PMCMRplus, leaps, lubridate, ggrepel, rstan, loo, bootstrap, conflicted
+Remotes: nxskok/smmr
